--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "memer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mmpal78.github.io/memer/",
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -12,11 +13,14 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
