--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://mmpal78.github.io/memer/",
   "dependencies": {
+    "enzyme-adapter-react-16": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -14,6 +15,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "enzyme": "^3.2.0",
     "gh-pages": "^1.1.0",
     "react-scripts": "1.0.17"
   },
